# ddns-updater

./: .env  .gitignore  README.md  manifest.ini  pyproject.toml
src/: ddns_updater.py
src/lanmanagement/: ddns_service_adapters.py  ddns_updater.py  dns_service.py
src/lanmanagement/test/: test_ddns_service_adapters.py  test_ddns_updater.py  test_dns_service.py
